examples/test/testpolicy11263.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11263
  namespace: namespace60
spec:
  podSelector:
    matchLabels:
      key43: value39
      key0: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value41
          key17: value17
          key2: value20
      podSelector:
        matchLabels:
          key37: value24
          key45: value16
